--- a/transfernews.html
+++ b/transfernews.html
@@ -39,6 +39,41 @@
   </div>
 </div>
 
+  <!-- Story 3: Tijjani Reijnders -->
+  <div class="transfer-story">
+    <img src="images/ren1.jpg" alt="Tijjani Reijnders" class="player-photo" />
+    <div class="transfer-text">
+      <p><strong>Tijjani Reijnders</strong></p>
+      <p>On 11 June 2025, Premier League club Manchester City announced the signing of Reijnders on a five-year deal reportedly worth £46.5m.</p>
+      <p>The 26-year-old midfielder joined from AC Milan, where he made 104 appearances and scored 19 goals in two seasons.</p>
+    </div>
+  </div>
+</div>
+
+  <!-- Story 4: Jobe Bellingham -->
+  <div class="transfer-story">
+    <img src="images/jobe1.jpg" alt="Jobe Bellingham" class="player-photo" />
+    <div class="transfer-text">
+      <p><strong>Jobe Bellingham</strong></p>
+      <p>Jobe Bellingham joined Borussia Dortmund from Sunderland on a five-year contract until June 2030.</p>
+      <p>Sunderland say the fee is a club record, believed to be 32m euros (£26.96m) plus 5m euros (£4.2m) in add-ons.</p>
+      <p>The 19-year-old midfielder has played for the Black Cats since 2023, making 90 appearances, and helped them secure promotion to the Premier League last season.</p>
+    </div>
+  </div>
+</div> 
+
+    <!-- Story 5: Paul Pogba -->
+  <div class="transfer-story">
+    <img src="images/pog.jpg" alt="Paul Pogba" class="player-photo" />
+    <div class="transfer-text">
+      <p><strong>Paul Pogba</strong></p>
+      <p>AS Monaco has officially announced the signing of Paul Pogba until 2027.</p>
+      <p>The Former Juventus and Manchester United player spent the last few months as a free agent following an 18 month doping ban.</p>
+      <p>The 32 year old midfielder is determined to relaunch his career with the 2026 World Cup already in sight.</p>
+    </div>
+  </div>
+</div> 
+  
  <script>
    function toggleTransferNews() {
    const section = document.getElementById("TransferNewsSection");
