Updated Transfer News page with new stories and images, fixed inconsistent box shadows on FitCheck and Transfer sections, ensured full background image coverage, added search redirect functionality, and styled dates in player names

--- a/transfernews.html
+++ b/transfernews.html
@@ -31,13 +31,13 @@
   <h1 class="section-heading">TRANSFER NEWS 25/26 SEASON</h1>
 
   <!-- === TRANSFER STORIES WRAPPER === -->
-  <div class="transfer-container">
-    
+   <div class="transfer-container">
+
     <!-- Story 1 -->
     <div class="transfer-story">
       <img src="images/trent1.jpg" alt="Trent Alexander-Arnold" class="player-photo">
       <div class="transfer-text">
-        <h3>Trent Alexander-Arnold</h3>
+        <h3>Trent Alexander-Arnold <span class="transfer-date">(12-June-2025)</span></h3>
         <p>The English right back has left Liverpool and joined Spanish giants Real Madrid.</p>
         <p>He departs Anfield after 354 appearances and 23 goals for the club.</p>
       </div>
@@ -47,7 +47,7 @@
     <div class="transfer-story">
       <img src="images/witz3.jpg" alt="Florian Wirtz" class="player-photo">
       <div class="transfer-text">
-        <h3>Florian Wirtz</h3>
+        <h3>Florian Wirtz <span class="transfer-date">(20-June-2025)</span></h3>
         <p>Wirtz joins Liverpool for a record £100 million, the most expensive Bundesliga transfer ever.</p>
       </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="transfer-story">
       <img src="images/tija.PNG" alt="Tijjani Reijnders" class="player-photo">
       <div class="transfer-text">
-        <h3>Tijjani Reijnders</h3>
+        <h3>Tijjani Reijnders <span class="transfer-date">(11-June-2025)</span></h3>
         <p>Manchester City signs Reijnders on a £46.5m five-year deal from AC Milan.</p>
         <p>He scored 19 goals in two seasons.</p>
       </div>
@@ -66,7 +66,7 @@
     <div class="transfer-story">
       <img src="images/jobe2.PNG" alt="Jobe Bellingham" class="player-photo">
       <div class="transfer-text">
-        <h3>Jobe Bellingham</h3>
+        <h3>Jobe Bellingham <span class="transfer-date">(10-June-2025)</span></h3>
         <p>Joins Borussia Dortmund for a record Sunderland fee. 90 appearances helped gain promotion.</p>
       </div>
     </div>
@@ -75,22 +75,41 @@
     <div class="transfer-story">
       <img src="images/pog.jpg" alt="Paul Pogba" class="player-photo">
       <div class="transfer-text">
-        <h3>Paul Pogba</h3>
-        <p>Pogba signs with AS Monaco until 2027 after an 18-month doping ban.</p>
+        <h3>Paul Pogba <span class="transfer-date">(28-June-2025)</span></h3>
+        <p> Pogba signs with AS Monaco until 2027 after an 18-month doping ban.</p>
         <p>The 32-year-old is looking to revive his career ahead of the 2026 World Cup.</p>
       </div>
     </div>
 
-     <!-- Story 5 -->
+     <!-- Story 6 -->
     <div class="transfer-story">
       <img src="images/noni.jpg" alt="Noni Madueke" class="player-photo">
       <div class="transfer-text">
-        <h3>Noni Madueke</h3>
-        <p>The 23 year old winger joined the Gunners for 52 million pounds from Chelsea</p>
+        <h3>Noni Madueke <span class="transfer-date">(18-July-2025)</span></h3>
+        <p>The 23 year old winger joined the Gunners for 52 million pounds from Chelsea. </p>
         <p>Madueke scored 11 goals, and provided five assists for Chelsea last season, and broke into Thomas Tuchel’s England squad. </p>
       </div>
     </div>
-  </div>
+
+      <!-- Story 7 -->
+    <div class="transfer-story">
+      <img src="images/rashford pic.jpg" alt="Marcus Rashford" class="player-photo">
+      <div class="transfer-text">
+        <h3>Marcus Rashford <span class="transfer-date">(23-July-2025)</span></h3>
+        <p>Former Manchester United forward Marcus Rashford has joined LaLiga side FC Barcelona on loan.</p>
+        <p>The 27-year-old was no longer in favour at Old Trafford.</p>
+      </div>
+    </div>
+
+  <!-- Story 8 -->
+    <div class="transfer-story">
+      <img src="images/vic.jpg" alt="Viktor Gyokeres" class="player-photo">
+      <div class="transfer-text">
+        <h3>Viktor Gyokeres <span class="transfer-date">(27-July-2025)</span></h3>
+        <p>Swedish footballer and ex-Sporting Lisbon ace, Viktor Gyokeres has joined North London side Arsenal.</p>
+        <p>The Portuguese side received £55m plus £10m in add-ons, with Gyokeres joining on a five-year deal.</p>
+      </div>
+    </div>
 
   <!-- === SEARCH FUNCTION === -->
   <script>
