--- a/fitcheck.html
+++ b/fitcheck.html
@@ -186,39 +186,55 @@
  </nav>
   
   <!-- Main Content -->
-  <div id="FitCheckSection">
-    <h2>LATEST PLAYER FITS</h2>
+ <!-- Main Content -->
+<div id="FitCheckSection">
+  <h2>LATEST PLAYER FITS</h2>
 
-    <!-- Player 1 -->
-    <div class="player-box">
-      <img src="images/him1.jpg" alt="Khuliso Mudau action" class="main-photo">
-      <div class="text-content">
-        <h2>KHULISO MUDAU</h2>
-        <p>Right back for Mamelodi Sundowns: Formal wear is on another level</p>
-        <p>Style: Fitting to the body</p>
-      </div>
-      <div class="outfit-gallery">
-        <img src="images/kk1.PNG" alt="Look 1">
-        <img src="images/kk2.PNG" alt="Look 2">
-        <img src="images/kk3.PNG" alt="Look 3">
-      </div>
+  <!-- Player 1 -->
+  <div class="player-box">
+    <img src="images/him1.jpg" alt="Khuliso Mudau action" class="main-photo">
+    <div class="text-content">
+      <h2>KHULISO MUDAU</h2>
+      <p>Right back for Mamelodi Sundowns: Formal wear is on another level</p>
+      <p>Style: Fitting to the body</p>
     </div>
-
-    <!-- Player 2 -->
-    <div class="player-box">
-      <img src="images/mike2.jpg" alt="Mike Maignan action" class="main-photo">
-      <div class="text-content">
-        <h2>MIKE MAIGNAN</h2>
-        <p>Goalkeeper for AC Milan: Makes iconic fashion statements on and off the pitch</p>
-        <p>Style: 90's Hip Hop with modern hues/Track Suits</p>
-      </div>
-      <div class="outfit-gallery">
-        <img src="images/mm3.PNG" alt="Look 1">
-        <img src="images/MM4.PNG" alt="Look 2">
-        <img src="images/mmm2.PNG" alt="Look 3">
-      </div>
+    <div class="outfit-gallery">
+      <img src="images/kk1.PNG" alt="Look 1">
+      <img src="images/kk2.PNG" alt="Look 2">
+      <img src="images/kk3.PNG" alt="Look 3">
     </div>
   </div>
+
+  <!-- Player 2 -->
+  <div class="player-box">
+    <img src="images/mike2.jpg" alt="Mike Maignan action" class="main-photo">
+    <div class="text-content">
+      <h2>MIKE MAIGNAN</h2>
+      <p>Goalkeeper for AC Milan: Makes iconic fashion statements on and off the pitch</p>
+      <p>Style: 90's Hip Hop with modern hues/Track Suits</p>
+    </div>
+    <div class="outfit-gallery">
+      <img src="images/mm3.PNG" alt="Look 1">
+      <img src="images/MM4.PNG" alt="Look 2">
+      <img src="images/mmm2.PNG" alt="Look 3">
+    </div>
+  </div>
+
+  <!-- ✅ Player 3: Ramos (fixed placement + typo) -->
+  <div class="player-box">
+    <img src="images/ramos main pic.jpg" alt="Sergio Ramos action" class="main-photo">
+    <div class="text-content">
+      <h2>SERGIO RAMOS</h2>
+      <p>Centre Back for CF Monterrey: Keeps it trendy with a personal twist. Cares about details from hair to fits to tats.</p>
+      <p>Style: Trendsetter, personalizes trends</p>
+    </div>
+    <div class="outfit-gallery">
+      <img src="images/ramos1.jpg" alt="Look 1">
+      <img src="images/ramos2.jpg" alt="Look 2">
+      <img src="images/ramos3.jpg" alt="Look 3">
+    </div>
+  </div>
+</div> <!-- closes #FitCheckSection -->
 
   <!-- Footer -->
   <footer>
