Update footer across all HTML files for consistency

--- a/transfernews.html
+++ b/transfernews.html
@@ -677,7 +677,7 @@
   <!-- === FOOTER === -->
   <footer>
     &copy; 2025 All rights reserved. Gazillion Goals.<br>
-    Site designed and maintained by P N Inc. | Follow <strong>Gazillion Goals</strong> on Tik Tok
+    Site designed and maintained by P N. | Follow <strong>Gazillion Goals</strong> on Tik Tok
     <a href="https://www.tiktok.com/@gazilliongoals" target="_blank">
       <i class="fab fa-tiktok tiktok-icon"></i>
     </a>
