Update transfer.html with more stories, refresh coming-soon page, and add new images to images folder

--- a/transfernews.html
+++ b/transfernews.html
@@ -671,6 +671,46 @@
         </div>
       </div>
 
+      <!-- Story 12 -->
+      <div class="transfer-story">
+        <img src="images/son.webp" alt="Son Heung-min" class="player-photo">
+        <div class="transfer-text">
+          <h3>Son Heung-min <span class="transfer-date">(06-August-2025)</span></h3>
+          <p>On 6 August 2025, Son moved to Major League Soccer club Los Angeles FC in a deal worth $26.5 million.</p>
+          <p>Son had been in Tottenham Hotspur for 10 years, I never thought he would leave!.</p>
+        </div>
+      </div>
+
+        <!-- Story 13 -->
+      <div class="transfer-story">
+        <img src="images/eze.webp" alt="Eberechi Eze" class="player-photo">
+        <div class="transfer-text">
+          <h3>Eberechi Eze <span class="transfer-date">(23-August-2025)</span></h3>
+          <p>The 27-year-old England international is back at his boyhood club, where he was released from the academy at age 13.</p>
+          <p>He has left Crystal palace in a £67.5 million move, after lifting the FA CUP that saw him score the only goal, the winning goal.</p>
+        </div>
+      </div>
+
+        <!-- Story 14 -->
+      <div class="transfer-story">
+        <img src="images/xavi.webp" alt="Xavi Simons" class="player-photo">
+        <div class="transfer-text">
+          <h3>Xavi Simons<span class="transfer-date">(29-August-2025)</span></h3>
+          <p>Tottenham Hotspur has signed 22-year-old Xavi Simons from RB Leipzig for 52 million pounds.</p>
+          <p>Xavi has signed a long-term contract with the North London club and will wear the No.7 shirt this season.</p>
+        </div>
+      </div>
+
+        <!-- Story 15 -->
+      <div class="transfer-story">
+        <img src="images/garnacho.webp" alt="Alejandro Garnacho" class="player-photo">
+        <div class="transfer-text">
+          <h3>Alejandro Garnacho<span class="transfer-date">(30-August-2025)</span></h3>
+          <p>Chelsea have signed Argentine winger Garnacho from Manchester United on a seven year contract in a deal worth £40 million (€46m/$54m).</p>
+          <p>In his first interview with the blues he referred to them as 'the best in the world' </p>
+        </div>
+      </div>
+
     </div>
   </div>
 
