--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -560,10 +560,9 @@
           <i class="fas fa-calendar-alt"></i>
         </div>
         <h2>COMING SOON</h2>
-        <p>Stay tuned for the latest footballing events!</p>
-        <p>We're working hard to bring you the most exciting upcoming matches, tournaments, and football events.</p>
+        <p>Full Time Twists! Season 2</p>
         <div class="subtitle">
-          Check back soon for updates on Premier League fixtures, Champions League matches, and more!
+          Check back soon for more updates 
         </div>
       </div>
     </div>
