Updated transfernews.html and added new image

--- a/transfernews.html
+++ b/transfernews.html
@@ -711,6 +711,16 @@
         </div>
       </div>
 
+       <!-- Story 16 -->
+      <div class="transfer-story">
+        <img src="images/isak1.webp" alt="Alexander Isak" class="player-photo">
+        <div class="transfer-text">
+          <h3>Alexander Isak<span class="transfer-date">(31-August-2025)</span></h3>
+          <p>After months of tension and tales, Liverpool finally signed Swedish Striker Alexander Isak.</p>
+          <p>The former Newcastle man arrives in a record-breaking £125 million move.</p>
+        </div>
+      </div>
+
     </div>
   </div>
 
